Fixes for ensuring update date stays the same